# chatbot

./: .gitignore  LAMBDA_VPC_ASPECT_CHANGES.md  README.md  cdk.context.json  cfn-events.json  chat.cyber.gov.il-local.har  deployment-manifest.yaml  error.txt  incd-deploy-fixes.txt  manifest-example.yaml  package-lock.json  package.json  pyproject.toml
cli/: magic-config.ts  utils.ts
docs/: CONFIG-PARAMETERS.md  MANIFEST-PARAMETERS.md  lambda-vpc-configuration.md
docs/documentation/: private-chatbot.md
lib/: aws-genai-llm-chatbot-stack.ts  chatbot-stage.ts  pipeline-stack.ts
lib/authentication/: index.ts
lib/authentication/lambda/updateUserPoolClient/: index.js
lib/chatbot-api/: index.ts
lib/chatbot-api/chatbot-s3-buckets/: index.ts
lib/customizations/: cognito-private-proxy.ts
lib/layer/: index.ts
lib/rag-engines/data-import/: index.ts
lib/sagemaker-model/hf-custom-script-model/: index.ts
lib/shared/: index.ts  lambda-vpc-aspect.ts  shared-asset-bundler.ts  types.ts
lib/shared/layers/common/: requirements.txt
lib/shared/layers/python-sdk/python/genai_core/: workspaces.py
lib/user-interface/: index.ts  private-website.ts
lib/user-interface/react-app/: package-lock.json  package.json
lib/user-interface/react-app/src/: app.tsx
lib/user-interface/react-app/src/components/: app-configured.tsx
lib/user-interface/react-app/src/pages/: no-default-application.tsx
lib/user-interface/react-app/src/pages/admin/manage-application/: application-form.tsx
scripts/: create-vpc-endpoints.sh  deploy-pipeline.sh
terraform/pipeline/: backend.hcl  codebuild.tf  codecommit.tf  codepipeline.tf  main.tf  outputs.tf  sns.tf  terraform.tfvars  variables.tf
